# libcrosswind

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  index.html  params.json
docs/html/: actor_8hpp.html  actor_8hpp_source.html  annotated.html  box_8hpp.html  box_8hpp_source.html  chunk_8hpp.html  chunk_8hpp_source.html  classcw_1_1engine-members.html  classcw_1_1engine.html  classcw_1_1functional_1_1delegate-members.html  classcw_1_1functional_1_1delegate.html  classcw_1_1functional_1_1delegate_3_01void_00_01_args_8_8_8_4-members.html  classcw_1_1functional_1_1delegate_3_01void_00_01_args_8_8_8_4.html  classcw_1_1functional_1_1hollow__property-members.html  classcw_1_1functional_1_1hollow__property.html  classcw_1_1functional_1_1resource__property-members.html  classcw_1_1functional_1_1resource__property.html  classcw_1_1implementation_1_1composition_1_1camera-members.html  classcw_1_1implementation_1_1composition_1_1camera.html  classcw_1_1implementation_1_1composition_1_1stage-members.html  classcw_1_1implementation_1_1composition_1_1stage.html  classcw_1_1implementation_1_1graphical_1_1object_1_1model-members.html  classcw_1_1implementation_1_1graphical_1_1object_1_1model.html  classcw_1_1implementation_1_1graphical_1_1object_1_1sprite__animation-members.html  classcw_1_1implementation_1_1graphical_1_1object_1_1sprite__animation.html  classcw_1_1implementation_1_1graphical_1_1opengl_1_1render__batch-members.html  classcw_1_1implementation_1_1graphical_1_1opengl_1_1render__batch.html  classcw_1_1implementation_1_1graphical_1_1opengl_1_1renderer-members.html  classcw_1_1implementation_1_1graphical_1_1opengl_1_1renderer.html  classcw_1_1implementation_1_1graphical_1_1opengl_1_1shader__program-members.html  classcw_1_1implementation_1_1graphical_1_1opengl_1_1shader__program.html  classcw_1_1implementation_1_1graphical_1_1opengl_1_1sprite__batch-members.html  classcw_1_1implementation_1_1graphical_1_1opengl_1_1sprite__batch.html  classcw_1_1implementation_1_1graphical_1_1opengl_1_1texture-members.html  classcw_1_1implementation_1_1graphical_1_1opengl_1_1texture.html  classcw_1_1implementation_1_1graphical_1_1opengl_1_1window-members.html  classcw_1_1implementation_1_1graphical_1_1opengl_1_1window.html  classcw_1_1implementation_1_1graphical_1_1sdl_1_1surface-members.html  classcw_1_1implementation_1_1graphical_1_1sdl_1_1surface.html  classcw_1_1implementation_1_1graphical_1_1video-members.html  (+312 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  enums_0.js  (+58 more)
internal/include/Crosswind/concurrency/: atomical_property.hpp  mutexed_map.hpp  mutexed_property.hpp
internal/include/Crosswind/containers/: cacheable.hpp
internal/include/Crosswind/crypto/: base64.hpp  encoder.hpp  sha1.hpp
internal/include/Crosswind/cryptography/: crypto.hpp
internal/include/Crosswind/datatypes/: json.hpp  msgpack.hpp
internal/include/Crosswind/events/: delegate.h  delegate.hpp
internal/include/Crosswind/graphics/: color_rgb.hpp  dimension_xyz.hpp  object_xyz.hpp  pointXYZ.h  point_xyz.hpp  texture.hpp
internal/include/Crosswind/gui/: window.h
internal/include/Crosswind/input/: input_listener.hpp
internal/include/Crosswind/javascript/: interpreter.hpp
internal/include/Crosswind/logic/: colorLogicModule.h  (+2 more)
internal/include/crosswind/: engine.hpp
internal/src/crosswind/: engine.cpp
platform/: README.md  Readme.md
resources/assets/sonic_the_hedgehog/: Readme.md
resources/tests/gui/: data.json
scripts/actors/: button.chai  control.chai  file_browser.chai  input.chai  mouse.chai  panel.chai  table.chai
setup/: build_all.sh  build_all_linux.sh  build_all_windows.sh  bullet.sh  bullet_linux.sh  bullet_windows.sh  chaiscript.sh  chaiscript_linux.sh  chaiscript_windows.sh  glew.sh  glew_linux.sh  glew_windows.sh  glm.sh  glm_linux.sh  glm_windows.sh  sdl.sh  sdl2.sh  sdl2_linux.sh  sdl2_windows.sh  sdl_image.sh  sdl_image_linux.sh  sdl_image_windows.sh  sdl_mixer.sh  sdl_mixer_linux.sh  sdl_mixer_windows.sh  sdl_ttf.sh  sdl_ttf_linux.sh  sdl_ttf_windows.sh
setup/standard/: common.sh  common_linux.sh  common_windows.sh
setup/win32/: build.bat
setup/windows/: build.bat
src/: FFVI.cpp  battle.cpp  gameplay.cpp  sega_logo.hpp  team_logo.hpp  terra.hpp
tests/Engine/: CMakeLists.txt  main.cpp
tests/Engine/scripts/: main.chai
tests/Engine/scripts/actors/: border.chai  button.chai  column.chai  container.chai  control.chai  file_browser.chai  glass_panel.chai  green_button.chai  label.chai  mouse.chai  panel.chai  table.chai  text_box.chai
tests/Engine/scripts/actors/main_scene/: canvas.chai  preview_panel.chai  properties_panel.chai  texture_panel.chai
tests/Engine/scripts/scenes/: main_scene.chai
tests/FFVI/: FFVI.cpp  FFVI.vcxproj  FFVI.vcxproj.filters  base.cpp  base.hpp  battle.cpp  battle.hpp  gameplay.hpp  terra.cpp  terra.hpp  title.cpp  title.hpp
tests/game/: CMakeLists.txt  main.cpp
tests/gui/: CMakeLists.txt  main.cpp
tests/sonic_the_hedgehog/: CMakeLists.txt  main.cpp
tests/sonic_the_hedgehog/characters/: chunk.hpp  sonic.hpp
tests/sonic_the_hedgehog/characters/general/: chunk.hpp  monitor.hpp  sonic.hpp
tests/sonic_the_hedgehog/characters/title/: sega_logo.hpp  team_logo.hpp  title_background.hpp  title_logo.hpp
tests/sonic_the_hedgehog/items/: monitor.hpp
tests/sonic_the_hedgehog/scenes/: green_hill_zone.hpp  title.chai  title.hpp
tests/sonic_the_hedgehog/scripts/: main.chai
tests/sonic_the_hedgehog/scripts/scenes/: title.chai
tests/sonic_the_hedgehog/zones/: green_hill.hpp
tests/websockets/: main.cpp
tests/websockets/client/: CMakeLists.txt
tests/websockets/server/: echo_server.js
(+3718 files in other folders)
